--- a/gradle.properties
+++ b/gradle.properties
@@ -9,12 +9,12 @@ yarn_mappings=1.21.1+build.3
 loader_version=0.16.9
 
 # Mod Properties
-mod_version=1.1.0
+mod_version=0.1.0
 maven_group=net.the2019
 archives_base_name=newbase
 
 # Fabric API
 fabric_version=0.110.0+1.21.1
 
-#modMenü
+#modMenï¿½
 modmenu_version=11.0.3
