--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '1.8-SNAPSHOT'
+    id 'fabric-loom' version "${loom_version}"
 	id 'maven-publish'
 }
 
@@ -36,7 +36,7 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	modImplementation("com.terraformersmc:modmenu:${project.modmenu_version}")
+	//modImplementation("com.terraformersmc:modmenu:${project.modmenu_version}")
 
 }
 
