--- a/gradle.properties
+++ b/gradle.properties
@@ -2,19 +2,19 @@
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
+org.gradle.configuration-cache=false
+
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.1
-yarn_mappings=1.21.1+build.3
-loader_version=0.16.9
+minecraft_version=1.21.10
+yarn_mappings=1.21.10+build.2
+loader_version=0.17.3
+loom_version=1.12-SNAPSHOT
+
+# Fabric API
+fabric_version=0.136.0+1.21.10
 
 # Mod Properties
 mod_version=0.1.0
 maven_group=net.the2019
 archives_base_name=newbase
-
-# Fabric API
-fabric_version=0.110.0+1.21.1
-
-#modMenu
-modmenu_version=11.0.3
